# leaflink-online

./: .env.example  .gitignore  LICENSE  README.md  README_zh-Hant.md  README_zn-Hant.md  docker-compose.yml
backend/: Dockerfile  config.py  database.py  deps.py  errors.py  helpers.py  main.py  pyproject.toml
backend/routers/: auth.py  notes.py  search.py  tags.py  vaults.py
backend/schemas/: auth.py  common.py  note.py  tag.py  vault.py
db/: README.md  init.sql
docs/: API_contract_zh-Hant.md
frontend/: Dockerfile  README.md  nginx.conf  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/lib/: api.js  auth.js  markdown.js  notes.js  vaults.js
frontend/src/lib/components/: MarkdownEditor.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/notes/[id]/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/search/: +page.svelte
frontend/src/routes/vaults/: +page.svelte
frontend/src/routes/vaults/[id]/: +page.svelte
