[project]
name = "leaflink-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "asyncpg>=0.30",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "pydantic-settings>=2.6",
    "gunicorn>=23",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
